proc-macros/tests/ui/incorrect/sub/sub_dup_name_override.stderr
error: "override" is already defined
 --> tests/ui/incorrect/sub/sub_dup_name_override.rs:9:5
  |
9 |     fn two(&self) -> RpcResult<()>;
  |        ^^^
